feat: 插件加载优化

--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -2,6 +2,7 @@
 layout: mypost
 title: 主题预览
 categories: [Jekyll]
+extMath: true
 ---
 
 # 标题
@@ -143,7 +144,7 @@ _斜体_
 ## 代码块
 
 ```javascript
-blog.encodeHtml = function(html) {
+blog.encodeHtml = function (html) {
   var o = document.createElement('div')
   o.innerText = html
   var temp = o.innerHTML
@@ -182,11 +183,31 @@ return temp
 
 ## 数学公式
 
-需要在配置中开启
+需要在配置中设置`extMath: true`开启
 
-这是一行话`\( \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \)`这是一行话
+```
+# 行内
+\( \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \)
+$ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} $
+
+# 段落
+\[ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \]
+$$ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} $$
+```
+
+Lorem ipsum dolor sit `\( \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \)` amet consectetur adipisicing elit.
+
+Lorem ipsum dolor sit `$ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} $` amet consectetur adipisicing elit.
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut assumenda distinctio eveniet quos, saepe non quasi minus facere iste odit! Accusamus eos optio, a recusandae neque aliquam provident illum?
 
 `\[ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \]`
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut assumenda distinctio eveniet quos, saepe non quasi minus facere iste odit! Accusamus eos optio, a recusandae neque aliquam provident illum?
+
+`$$ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} $$`
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut assumenda distinctio eveniet quos, saepe non quasi minus facere iste odit! Accusamus eos optio, a recusandae neque aliquam provident illum?
 
 ## 插入 html
 
@@ -245,10 +266,5 @@ return temp
 ```html
 <!-- 属性什么的不要错了，最好用双引号括住 -->
 <!-- 网易云的iframe需要做些调整，调整如下 -->
-<iframe
-  src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66"
-  frameborder="0"
-  width="100%"
-  height="86px"
-></iframe>
+<iframe src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66" frameborder="0" width="100%" height="86px"></iframe>
 ```
