--- a/_posts/2022-04-23-白嫖-fly-io-服务器.md
+++ b/_posts/2022-04-23-白嫖-fly-io-服务器.md
@@ -8,6 +8,12 @@ categories: [Serverless]
 
 ![price](price.png)
 
+## 说明
+
+不要再搭建代理服务了，被检测出来如果未及时删除会收费的
+
+![mail](mail.png)
+
 ## 白嫖准备
 
 1. [注册账号](https://fly.io/)（需要信用卡验证，国内银联的卡也可以）
