--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -546,15 +546,15 @@ php70w-xmlrpc
 mkdir -p /usr/local/go
 mkdir -p /usr/local/go/gopath
 cd /usr/local/go
-wget https://dl.google.com/go/go1.15.3.linux-amd64.tar.gz
-tar -zxvf go1.15.3.linux-amd64.tar.gz
-mv go go_1.15.3
+wget https://studygolang.com/dl/golang/go1.18.2.linux-amd64.tar.gz
+mkdir go1.18 && tar -zxf go1.18.2.linux-amd64.tar.gz -C go1.18 --strip-components 1
+ln -s go1.18 go
 ```
 
 配置环境变量`/etc/profile`后追加，然后`source /etc/profile`
 
 ```sh
-export GOROOT=/usr/local/go/go_1.15.3
+export GOROOT=/usr/local/go/go
 export GOPATH=/usr/local/go/gopath
 export GO111MODULE=on
 export GOPROXY=https://goproxy.cn,direct
