fix: list style

--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -73,6 +73,9 @@ _斜体_
   - 缩进 2 空格
   - 缩进 2 空格
 
+  1. 缩进 2 空格
+  2. 缩进 2 空格
+
 - 无序列表 1-2
 - 无序列表 1-3
 
@@ -82,6 +85,9 @@ _斜体_
 
    1. 缩进 3 空格
    2. 缩进 3 空格
+
+   - 无序列表
+   - 无序列表
 
 2. 有序列表 1-2
 3. 有序列表 1-3
