--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -270,9 +270,11 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut assumenda distin
 ## 插入 iframe
 
 <iframe src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66" frameborder="0" width="100%" height="86px" ></iframe>
+<iframe src="//music.163.com/outchain/player?type=0&id=382716015&auto=0&height=430" frameborder="0" width="100%" height="430px"></iframe>
 
 ```html
 <!-- 属性什么的不要错了，最好用双引号括住 -->
 <!-- 网易云的iframe需要做些调整，调整如下 -->
 <iframe src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66" frameborder="0" width="100%" height="86px"></iframe>
+<iframe src="//music.163.com/outchain/player?type=0&id=382716015&auto=0&height=430" frameborder="0" width="100%" height="430px"></iframe>
 ```
