--- a/_posts/2019-03-08-docker的使用.md
+++ b/_posts/2019-03-08-docker的使用.md
@@ -91,15 +91,13 @@ docker info
 
 ## Registry 仓库
 
-docker 镜像托管和 git 仓库托管是很像的，对比 GitHub ，官方的镜像仓库是[Docker Hub](https://hub.docker.com)，拥有大量的高质量的官方镜像，当拉取镜像时，默认使用的也是改镜像。
-
-由于国内网络环境下载镜像很慢，可以通过配置仓库的镜像地址加速下载
+docker 镜像托管和 git 仓库托管是很像的，对比 GitHub ，官方的镜像仓库是[Docker Hub](https://hub.docker.com)，拥有大量的高质量的官方镜像，当拉取镜像时，默认使用就是官方镜像。由于国内网络环境下载镜像很慢，可以通过配置仓库的镜像地址加速下载。如果临时加速的话可以 `docker pull mirror.ccs.tencentyun.com/bitnami/etcd:3.4.14 && docker tag bitnami/etcd:3.4.14`
 
 Linux 环境下更改配置文件`/etc/docker/daemon.json`
 
 ```json
 {
-  "registry-mirrors": ["https://hub-mirror.c.163.com", "https://docker.mirrors.ustc.edu.cn"]
+  "registry-mirrors": ["https://mirror.ccs.tencentyun.com", "https://dockerproxy.com", "https://hub-mirror.c.163.com"]
 }
 ```
 
