--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -575,25 +575,32 @@ tar -xvf node-v12.19.0-linux-x64.tar
 
 ```sh
 export NODE_HOME=/usr/local/nodejs/node-v12.19.0-linux-x64
-export NODE_GLOBAL_MODEL=/usr/local/nodejs/node_global
-export YARN_INSTALL=/usr/local/nodejs/yarn_bin
-export PATH=$PATH:$NODE_HOME/bin:$NODE_GLOBAL_MODEL/bin:$YARN_INSTALL/bin
+export NPM_GLOBAL=/usr/local/nodejs/npm_global
+export YARN_GLOBAL=/usr/local/nodejs/yarn_global
+export PATH=$PATH:$NODE_HOME/bin:$NPM_GLOBAL/bin:$YARN_GLOBAL/bin
 ```
 
-配置 `~/.npmrc`、`/usr/local/share/.yarnrc`
+配置 `~/.npmrc`、`~/.yarnrc`
 
 ```sh
-npm config set prefix "/usr/local/nodejs/node_global"
-npm config set cache "/usr/local/nodejs/node_cache"
+npm config set cache "/usr/local/nodejs/npm_cache"
+npm config set prefix "/usr/local/nodejs/npm_global"
 npm config set registry "http://mirrors.cloud.tencent.com/npm/"
 
 npm install -g yarn
 yarn config set cache-folder "/usr/local/nodejs/yarn_cache"
 yarn config set global-folder "/usr/local/nodejs/yarn_global"
-yarn config set prefix "/usr/local/nodejs/yarn_bin"
+yarn config set prefix "/usr/local/nodejs/yarn_global"
+yarn config set ignore-engines true
 ```
 
-查看 yarn 配置生效`yarn cache dir`，默认是在`/usr/local/share/.cache`
+查看 yarn 配置生效
+
+```
+yarn global bin
+yarn global dir
+yarn cache dir
+```
 
 ## Python3
 
