--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -730,9 +730,9 @@ yum remove ruby ruby-devel
 yum install centos-release-scl-rh
 yum update
 yum list | grep rh-ruby
-yum install rh-ruby26 rh-ruby26-ruby-devel
+yum install rh-ruby27 rh-ruby27-ruby-devel
 scl -l
-scl enable rh-ruby26 bash # 关机/退出bash失效
+scl enable rh-ruby27 bash # 关机/退出bash失效
 ruby -v
 gem -v
 ```
@@ -740,15 +740,16 @@ gem -v
 设置 gem
 
 ```sh
-# 替换为国内源，不要用淘宝的，都不维护了
-gem sources --add https://gems.ruby-china.com/
 gem sources --remove https://rubygems.org/
-gem sources --remove http://mirrors.aliyun.com/rubygems/
+gem sources -a https://mirrors.tuna.tsinghua.edu.cn/rubygems/
 gem sources -l
-gem update
+gem sources --clear-all
+gem sources --update
 
-gem install jekyll
+gem update
 gem install bundler
+bundle config mirror.https://rubygems.org https://mirrors.tuna.tsinghua.edu.cn/rubygems
+bundle config list
 ```
 
 ## 设置开机自启动脚本
