--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -23,6 +23,12 @@ yum install libpng libpng-devel sqlite sqlite-devel
 yum install libxml2 libxml2-devel libxslt libxslt-devel
 ```
 
+### 更新根证书
+
+```sh
+yum install ca-certificates
+```
+
 ### 安装源
 
 官方源会安装在`/etc/yum.repos.d`
